--- a/View/index.html
+++ b/View/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>	</title>
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
@@ -10,7 +11,49 @@
       <div class="row">
         <div class="col-sm border-right">
     	     <div class="row border-bottom border-danger"><p class="w-100 text-center">commands</p></div>
-    	     <div class="row">comand1</div>
+    	     <div  class="row">
+            <!-- Button trigger modal -->
+                <button id="addBook" type="button" class="btn btn-secondary w-100" data-toggle="modal" data-target="#modalBookChose">
+                  add Book
+                </button>
+
+                      <!-- Modal -->
+                      <div class="modal fade" id="modalBookChose" tabindex="-1" role="dialog" aria-labelledby="modalBookChoseTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="modalBookChoseLongTitle">Drag your book</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+<!--      <form id="upload-container" method="POST" action="http://193.111.0.203/InfSearch/Controller/save.php" enctype="multipart/form-data">
+     <img id="upload-image" src="upload.svg">
+     <div>
+          <input id="file-input" type="file" name="path" multiple>
+          <label for="file-input">Выберите файл</label>
+          <span>или перетащите его сюда</span>
+     </div>
+</form> -->
+<form id="upload-container" method="POST" action="http://193.111.0.203/InfSearch/Controller/save.php" enctype="multipart/form-data">
+              <div class="d-flex justify-content-center">
+          <input id="file-input" type="file" name="path" multiple>
+          <label for="file-input">choose fb2 file</label> 
+          <span>&nbspor drag it</span>
+     </div>
+      <div id="dropZone">
+        
+      </div>
+ 
+    </form>  
+
+                            </div>
+                    
+                          </div>
+                        </div>
+                      </div>
+</div>
         </div>
         <div class="col-sm-6">iiiiiiii</div>
         <div class="col-sm border-left">
@@ -39,5 +82,5 @@
 <script src="https://code.jquery.com/jquery-3.4.1.js"  crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script type="text/javascript" src="js\main.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </html>
