--- a/View/index.html
+++ b/View/index.html
@@ -40,7 +40,7 @@
                 </button>       
             </div>
             <div  class="row ">
-            <!-- Button to show matrix -->
+            <!-- Button to search -->
                 <button id="boolSearch" type="button" class="btn btn-secondary w-100 border-bottom">
                   search
                 </button>       
@@ -49,6 +49,30 @@
             <!-- Button to show matrix -->
                 <button id="showJustMatrix" type="button" class="btn btn-secondary w-100 border-bottom">
                   show just matrix
+                </button>       
+            </div>
+            <div  class="row ">
+            <!-- Button to show 2WordsIndex -->
+                <button id="showWords2Index" type="button" class="btn btn-secondary w-100 border-bottom">
+                  show 2-word index
+                </button>       
+            </div>
+            <div  class="row ">
+            <!-- Button to show coordIndex -->
+                <button id="coordIndex" type="button" class="btn btn-secondary w-100 border-bottom">
+                  show coord Index
+                </button>       
+            </div>
+            <div  class="row ">
+            <!-- Button to show permutationIndex -->
+                <button id="permutationIndex" type="button" class="btn btn-secondary w-100 border-bottom">
+                  show permutation Index
+                </button>       
+            </div>
+            <div  class="row ">
+            <!-- Button to show gramIndex -->
+                <button id="gramIndex" type="button" class="btn btn-secondary w-100 border-bottom">
+                  show gram Index
                 </button>       
             </div>
         <!-- end command column  -->
