--- a/View/index.html
+++ b/View/index.html
@@ -29,6 +29,16 @@
               </button>
             </div>
             <div  class="row">
+              <button id="crDictCompressed" type="button" class="btn btn-secondary w-100 border-bottom">
+                create dictionary compressed
+              </button>
+            </div>
+            <div  class="row">
+              <button id="crInvertIndexCompressed" type="button" class="btn btn-secondary w-100 border-bottom">
+                create invert index compressed
+              </button>
+            </div>
+            <div  class="row">
               <button id="crInvertIndex" type="button" class="btn btn-secondary w-100 border-bottom">
                 create invert index
               </button>
